--- a/ensyu/23_2.html
+++ b/ensyu/23_2.html
@@ -31,5 +31,11 @@
             </dd>
         </div>
         <div class="formltem">
-            
+            <dt>お問い合わせ内容</dt>
+            <dd><textarea name="message"></textarea></dd>
         </div>
+        </ldl>
+        <div class="btn"><input type="submit" value="送信する"/></div>
+        </form>
+        </body>
+        </html>
