--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
-	<meta name="description" content="JOHO TAROのポートフォリオサイトです" />
+	<meta name="description" content="Kori Takumiのポートフォリオサイトです" />
 	<title>PORTFOLIO</title>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Material+Icons+Outlined" rel="stylesheet">
 	<link href="portfolio/css/ress.css" media="all" rel="stylesheet" type="text/css" />
 	<link href="portfolio/css/style.css" media="all" rel="stylesheet" type="text/css" />
-	<link rel="shortcut icon" href="profile/img/favicon.ico" />
+	<link rel="shortcut icon" href="portfolio/img/favico.ico" />
 </head>
 
 <body>
@@ -36,8 +36,8 @@
 			<!-- main-visual -->
 			<div class="main-visual" id="about">
 				<div class="main-visual-inner">
-					<p class="main-visual-title">KORI TAKUMI</p>
-					<p class="main-visual-subtitle">PORTFOLIO</p>
+					<img src="portfolio/img/23122021011211A.png"  class="logo">
+
 					<div class="main-visual-profile">
 						<p class="main-visual-img">
 							<img src="portfolio/img/profile.png" alt="自画像" />
