--- a/ensyu/23_2.html
+++ b/ensyu/23_2.html
@@ -7,12 +7,12 @@
 </head>
 <body>
     <form action="program.php" method="post">
-        <ldl>
-            <div class="formlte">
+        <dl>
+            <div class="formItem">
                 <dt>お名前</dt>
                 <dd><input type="text" name="userName"/></dd>
             </div>
-            <div class="formltem">
+            <div class="formItem">
                 <dt>職業</dt>
                 <dd>
                 <label class="job"><input type="radio" name="job" value="学生"/>学生</label>
@@ -20,7 +20,7 @@
                 <label class="job"><input type="radio" name="job" value="その他"/>その他</label>
                 </dd>
             </div>
-        <div class="formaltem">
+        <div class="formItem">
             <dt>お問い合わせ種別</dt>
             <dd>
                 <select name="messageType">
@@ -30,11 +30,11 @@
                 </select>
             </dd>
         </div>
-        <div class="formltem">
+        <div class="formItem">
             <dt>お問い合わせ内容</dt>
             <dd><textarea name="message"></textarea></dd>
         </div>
-        </ldl>
+        </dl>
         <div class="btn"><input type="submit" value="送信する"/></div>
         </form>
         </body>
